--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./src/index.js"
   },
   "author": "emerson-oliveira",
-  "license": "MIT",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "cli-progress": "^3.12.0",
     "csv-writer": "^1.6.0",
