refactor: update .env.template

--- a/.env.template
+++ b/.env.template
@@ -4,15 +4,15 @@
 MAIN_URL="https://clarity.microsoft.com/"
 
 # URL principal do seu projeto
-BASEURL=
+BASEURL=https://clarity.microsoft.com/projects/view/XXXXXXXX/dashboard
 
 # Credenciais do Google para login
-EMAILGOOGLE=
-PASSGOOGLE=
+EMAILGOOGLE="email@gmail.com"
+PASSGOOGLE="password"
 
 # ID da planilha do Google
-SPREADSHEET_ID=
+SPREADSHEET_ID="XXXXXXXXXX"
 
 # Credenciais do serviço de email
-EMAILSERVICE=
-PASSSERVICE=
+EMAILSERVICE="XXXXX@XXXX.iam.gserviceaccount.com"
+PASSSERVICE=""
